edit-and-delete-task

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-unused-vars": "off" 
+      "no-unused-vars": "off",
+      "vue/no-use-v-if-with-v-for": "off"
     }
   },
   "browserslist": [
